plugins/kotlin/idea/tests/testData/highlighter/DelegateFunctionMissing.kt
// IGNORE_FIR
class <info descr="null">X</info><<info descr="null">T</info>>{}
fun <<info descr="null">T</info>> <info descr="null">foo</info>() : <info descr="null">X</info><<info descr="null">T</info>> {<error descr="[NO_RETURN_IN_FUNCTION_WITH_BLOCK_BODY] A 'return' expression required in a function with a block body ('{...}')">}</error>
val x <info descr="null">by</info> <error descr="[DELEGATE_SPECIAL_FUNCTION_MISSING] Type 'X<TypeVariable(T)>' has no method 'getValue(Nothing?, KProperty<*>)' and thus it cannot serve as a delegate" textAttributesKey="ERRORS_ATTRIBUTES">foo<<error descr="Type expected">></error>()</error>